src/objects/TentRegistrant__c.object
<CustomObject>
    <fields>
        <fullName>Group_Opportunity__c</fullName>
        <label>Group Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Registrant</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tentative Registrants</relationshipLabel>
        <relationshipName>Tentative_Registrants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Room_Type__c</fullName>
        <label>Room Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Tentative Registrant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TentRegistrant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tentative Registrants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>